# the-traitors

./: .gitignore  README.md  analyze_results.py  example_config.json  out.html  pyproject.toml
.github/: copilot-instructions.md
analysis/: summary_stats.json
analysis/traitors/: summary_stats.json
game_configs/the_traitors/: default.json  nine_person.json  single_traitor.json
reality_show_bench/: _groq.py  _local.py  analyze_results.py  config.py  llm.py  main.py
reality_show_bench/games/: __init__.py  _the_traitors.py  _types.py
results/traitors/0oisq1p0/: plomp.html  plomp.json  result.json
results/traitors/1fnk1fzg/: plomp.html  plomp.json  result.json
results/traitors/321ykjkt/: plomp.html  plomp.json  result.json
results/traitors/3325g7wm/: plomp.html  plomp.json  result.json
results/traitors/37r54yr5/: plomp.html  plomp.json  result.json
results/traitors/3lyaf9lv/: plomp.html  plomp.json  result.json
results/traitors/40z8rotu/: plomp.html  plomp.json
results/traitors/433y9yyp/: plomp.html  plomp.json  result.json
results/traitors/516gmx0q/: plomp.html  plomp.json  result.json
results/traitors/5kfiwxz6/: plomp.html  plomp.json
results/traitors/5vvoh9ls/: plomp.html  plomp.json  result.json
results/traitors/69umn4vu/: plomp.html  plomp.json  result.json
results/traitors/6w2z76zb/: plomp.html  plomp.json  result.json
results/traitors/7gnzt9jo/: plomp.html  plomp.json  result.json
results/traitors/7klpvf6l/: plomp.html  plomp.json  result.json
scripts/: local-phi-server.sh  run-traitors-summary.sh  run-traitors.sh
(+131 files in other folders)
