[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reality-show-bench"
version = "0.1.0"
description = "A benchmark tool for reality show analysis"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "typeguard>=3.0.0",
    "plomp==0.1.2",
    "typing-extensions>=4.0.0",
    "groq>=0.4.0",
    "instructor>=1.7.9",
]

[project.scripts]
reality-bench = "reality_show_bench.main:main"

[project.optional-dependencies]
dev = [
    "ruff>=0.0.267",
    "mypy>=1.3.0",
    "black>=23.3.0",
    "pytest>=7.3.1",
]

[tool.setuptools]
packages = ["reality_show_bench"]

[tool.ruff]
line-length = 120
target-version = "py310"
lint.select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true